# landdyrtilsyn-libs

./: .gitignore  Cargo.toml  README.md
.cargo/: audit.toml  config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: validate.yaml
lib-auth/: Cargo.toml  README.md
lib-auth/src/: config.rs  error.rs  lib.rs  token.rs
lib-auth/src/application_permissions/: auth.rs
lib-auth/src/delegated_permissions/: auth_layer.rs  mod.rs  types.rs
lib-clients/: Cargo.toml  README.md
lib-clients/src/: client.rs  config.rs  error.rs  lib.rs
lib-clients/src/arkiv/: arkiv_client.rs  mod.rs  response.rs
lib-clients/src/arkiv/model/: mod.rs  sak.rs  tilgangshjemmel.rs  tilgangskoder.rs
lib-clients/src/bilde/: bilde_client.rs  mod.rs  response.rs
lib-clients/src/document_generator/: document_generator_client.rs  mod.rs  response.rs
lib-clients/src/ejb/: ejb_client.rs  mod.rs  response.rs  response_begrensninger.rs  response_tilfeller.rs
lib-clients/src/geonorge/: geonorge_client.rs  mod.rs  response.rs
lib-clients/src/kodeverk/: kodeverk_client.rs  mod.rs  response.rs
lib-clients/src/koordinat/: error.rs  koordinat_client.rs  mod.rs  response.rs
lib-clients/src/orgenhet/: mod.rs  orgenhet_client.rs  response.rs
lib-clients/src/tilsynskvittering/: mod.rs  response.rs  tilsynskvittering_client.rs
lib-clients/src/virksomhet/: mod.rs  response.rs  virksomhet_client.rs
lib-clients/tests/: geonorge_test.rs  koordinat_test.rs
lib-email/: Cargo.toml  README.md
lib-email/src/: email_template.html  lib.rs  types.rs
lib-email/src/proto/: email.proto
lib-entra/: Cargo.toml  README.md
lib-entra/src/: error.rs  lib.rs  types.rs
lib-entra/src/application/: lib.rs
lib-entra/src/application_permissions/: lib.rs
lib-entra/src/delegated_permission/: lib.rs
lib-entra/src/delegated_permissions/: lib.rs
lib-google-cloud-storage/: Cargo.toml
lib-google-cloud-storage/src/: lib.rs
lib-keycloak-client/: Cargo.toml  README.md
lib-keycloak-client/src/: auth.rs  client.rs  error.rs  lib.rs
lib-nats/: Cargo.toml  README.md
lib-nats/src/: config.rs  consumer.rs  error.rs  lib.rs  object_store.rs
lib-nats/src/chunked_upload/: mod.rs  protocol.rs  receiver.rs  sender.rs
lib-schemas/: Cargo.toml  README.md
lib-schemas/src/: error.rs  lib.rs
lib-schemas/src/arkiv/: mod.rs  sak.rs
lib-schemas/src/arkiv/v2/: dokument.rs  journalpost.rs  mod.rs  query.rs  sak.rs
lib-schemas/src/arkiv/v2/command/: command.rs
lib-schemas/src/arkiv/v2/query/: query.rs
lib-schemas/src/skuffen/: dokument.rs  journalpost.rs  mod.rs  sak.rs  status.rs  tilgang.rs
lib-schemas/src/skuffen/command/: command.rs  commands.rs  journalpost.rs  mod.rs  sak.rs
lib-schemas/src/skuffen/query/: queries.rs  query.rs  responses.rs
lib-schemas/src/typer/: mod.rs  organisasjonsnummer.rs  personnummer.rs  uuid_id.rs
lib-slack-notifier/: Cargo.toml
lib-slack-notifier/src/: lib.rs
lib-sql/: Cargo.toml
lib-sql/src/: database_config.rs  lib.rs
