[package]
name = "landdyrtilsyn-libs"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["lib-keycloak-client", "lib-auth", "lib-google-cloud-storage", "lib-sql", "lib-nats", "lib-clients", "lib-schemas", "lib-slack-notifier", "lib-entra", "lib-email"]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
secrecy = "0.10.3"
tracing = "0.1.41"
thiserror = "2.0.16"

reqwest = { version = "0.12.23", features = ["json", "rustls-tls"]}
reqwest-retry = "0.7.0"
reqwest-middleware = { version = "0.4.2", features = ["json", "rustls-tls"] }

chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4"] }

tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }

base64 = "0.22.1"