[workspace]
members = ["lib-keycloak-client", "lib-auth", "lib-google-cloud-storage", "lib-sql", "lib-nats", "lib-clients", "lib-schemas", "lib-slack-notifier", "lib-entra", "lib-email"]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
secrecy = "0.10.3"
tracing = "0.1.44"
thiserror = "2.0.17"

reqwest = { version = "0.13.1", features = ["json","native-tls", "form", "http2"], default-features = false }
reqwest-retry = "0.9.0"
reqwest-middleware = { version = "0.5.0", features = ["json", "form"] }

chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4"] }

tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }

base64 = "0.22.1"
