[package]
name = "lib-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
secrecy = { workspace = true}
jsonwebtoken = { version = "9.3.1" }
serde = {workspace = true}
tracing = {workspace = true}
reqwest = {workspace = true}
#axum = {version="0.8.4", default-features = false, features= ["http"]}
http = "1.3"
axum = "0.8.4"
tower = "0.5.2"
futures = "0.3"