[package]
name = "lib-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
secrecy = { workspace = true}
jsonwebtoken = { version = "10.3.0" }
serde = {workspace = true}
tracing = {workspace = true}
reqwest = {workspace = true}
axum = {version="0.8.8", default-features = false, features= ["http1"]}
tower = "0.5.3"
futures = "0.3"
bytes = "1.11.0"
tokio = {workspace = true, features =["sync"]}
