[package]
name = "lib-clients"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { workspace = true}
reqwest-retry = { workspace = true}
reqwest-middleware = { workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }

bon = {version = "3.7.2",optional = true}
serde_path_to_error = "0.1.17"
urlencoding = "2.1.3"

lib_schemas = { path = "../lib-schemas", package = "lib-schemas", features = ["arkiv"] }

[features]
orgenhet = ["dep:bon"]
bilde = ["dep:bon"]
arkiv = ["dep:bon"]
kodeverk = ["dep:bon"]
dokument_generator = ["dep:bon"]
virksomhet = ["dep:bon"]
tilsynskvittering = ["dep:bon"]
ejb = ["dep:bon"]
default = []

