[package]
name = "lib-clients"
version = "0.1.0"
edition = "2024"


[dependencies]
reqwest = { workspace = true}
reqwest-retry = { workspace = true}
reqwest-middleware = { workspace = true, features = ["query"] }
serde = { workspace = true }
serde_json = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }

bon = {version = "3.8.2",optional = true}
serde_path_to_error = "0.1.20"
urlencoding = "2.1.3"

lib-keycloak-client = { path = "../lib-keycloak-client" }

[dev-dependencies]
tokio = { workspace = true }

[features]
orgenhet = ["dep:bon"]
bilde = ["dep:bon"]
arkiv = ["dep:bon"]
kodeverk = ["dep:bon"]
dokument_generator = ["dep:bon"]
virksomhet = ["dep:bon"]
tilsynskvittering = ["dep:bon"]
ejb = ["dep:bon"]
geonorge = ["dep:bon"]
default = []

