[package]
name = "lib-entra"
version = "0.1.0"
edition = "2024"

[features]
default = ["delegated_permissions", "application_permissions"]
delegated_permissions = []
application_permissions = []

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
base64 = {workspace = true}
secrecy = { workspace = true }


[dev-dependencies]
tokio = { workspace = true }
