[package]
name = "lib-keycloak-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"]}
reqwest-retry = "0.7.0"
reqwest-middleware = { version = "0.4.0", features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
secrecy = "0.10.3"
thiserror = "2.0.11"
