[package]
name = "lib-keycloak-client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { workspace = true, features = ["json", "rustls-tls"]}
reqwest-retry = { workspace = true }
reqwest-middleware = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
secrecy = { workspace = true }
thiserror = { workspace = true }
