[package]
name = "lib-nats"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secrecy = { workspace = true }
async-nats = { version = "0.43.1" }
futures = { version = "0.3.31", default-features = false }
