[package]
name = "lib-schemas"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true}
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["serde", "v7", "v4"] }

[features]
skuffen = []
default = []

