[package]
name = "lib-schemas"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true}
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.23.1", features = ["serde", "v7", "v4"] }

[dev-dependencies]
serde_json = { workspace = true }

[features]
skuffen = []
default = []
