[package]
name = "lib-sql"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secrecy = { workspace = true }
sqlx = { version = "0.8.6",  default-features = false, features = [
    "runtime-tokio",
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "uuid",
    "chrono",
    "macros",
] }


[lints.rust]
unsafe_code = "forbid"  # Disallow unsafe code
missing_docs = "warn"   # Warn if public items lack documentation

[lints.clippy]
pedantic = "warn"       # Enable Clippy’s strictest rules
unwrap_used = "deny"    # Disallow `unwrap()`
